// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <PatientsListHeader /> should renders correctly 1`] = `
<div
  className="panel-heading"
>
  <div
    className="control-group right"
  >
    <div
      className="dropdown"
    >
      <PTButton
        aria-label="Settings"
        className="btn btn-success btn-inverse btn-dropdown-toggle open"
        onClick={[Function]}
      >
        <i
          className="btn-icon fa fa-cog"
        />
      </PTButton>
    </div>
    <PTButton
      aria-label="Filter"
      className="btn btn-success btn-inverse btn-filter"
      onClick={[Function]}
    >
      <i
        className="btn-icon fa fa-filter"
      />
    </PTButton>
  </div>
  <h1
    className="panel-title"
  />
</div>
`;

exports[`Component <PatientsListHeader /> should renders correctly 2`] = `
<div
  className="panel-heading"
>
  <div
    className="control-group right"
  >
    <div
      className="dropdown open"
    >
      <PTButton
        aria-label="Settings"
        className="btn btn-success btn-inverse btn-dropdown-toggle open"
        onClick={[Function]}
      >
        <i
          className="btn-icon fa fa-cog"
        />
      </PTButton>
      <lifecycle(PatientsInfoPanel)
        toggleVisibility={[Function]}
      />
    </div>
    <PTButton
      aria-label="Filter"
      className="btn btn-success btn-inverse btn-filter"
      onClick={[Function]}
    >
      <i
        className="btn-icon fa fa-filter"
      />
    </PTButton>
  </div>
  <h1
    className="panel-title"
  />
</div>
`;

exports[`Component <PatientsListHeader /> should renders correctly 3`] = `
<div
  className="panel-heading"
>
  <div
    className="control-group right"
  >
    <div
      className="dropdown open"
    >
      <PTButton
        aria-label="Settings"
        className="btn btn-success btn-inverse btn-dropdown-toggle open"
        onClick={[Function]}
      >
        <i
          className="btn-icon fa fa-cog"
        />
      </PTButton>
      <lifecycle(PatientsInfoPanel)
        toggleVisibility={[Function]}
      />
    </div>
    <PTButton
      aria-label="Filter"
      className="btn btn-success btn-inverse btn-filter"
      onClick={[Function]}
    >
      <i
        className="btn-icon fa fa-filter"
      />
    </PTButton>
  </div>
  <h1
    className="panel-title"
  />
</div>
`;
